syntax = "proto3";

package goldens;

import "google/protobuf/timestamp.proto";

option go_package = "markitos-it-svc-goldens/proto";

message Golden {
  string id = 1;
  string title = 2;
  string description = 3;
  string category = 4;
  repeated string tags = 5;
  google.protobuf.Timestamp updated_at = 6;
  string content_b64 = 7;
  string cover_image = 8;
}

message GetAllGoldensRequest {}
message GetAllGoldensResponse {
  repeated Golden goldens = 1;
  int32 total = 2;
}

message GetGoldenByIdRequest {
  string id = 1;
}
message GetGoldenByIdResponse {
  Golden golden = 1;
}

service GoldenService {
  rpc GetAllGoldens(GetAllGoldensRequest) returns (GetAllGoldensResponse);
  rpc GetGoldenById(GetGoldenByIdRequest) returns (GetGoldenByIdResponse);
}
